--- a/etc/rpi-security.conf
+++ b/etc/rpi-security.conf
@@ -3,7 +3,7 @@
 mac_addresses=aa:aa:aa:bb:bb:bb,cc:cc:cc:dd:dd:dd
 
 # The Telegram bot token.
-telegram_bot_token=999999999:xxxxxxx-zzzzzzzzzzzzzzzzz
+telegram_bot_token=153977344:AAGFfRahZJw1VCM4-1RU8pEthep4aActC5g
 
 # The number of people allowed to chat with Telegram bot
 telegram_users_number=1
@@ -39,7 +39,7 @@ camera_capture_length=2
 # Image size for photos. Must be set to a valid resolution for your camera module
 # Max resolution for V2 module: 3280x2464
 # Max resolution for V1 module: 2592x1944
-photo_size=3280x2464
+photo_size=2592x1944
 
 # Size for GIF files. Anything higher than 800x600 can use too much memory
 gif_size=640x480
@@ -49,3 +49,6 @@ motion_size=640x480
 
 # Threshold for detection of motion. Lower is more sensitivity.
 motion_detection_threshold=1000
+
+# Shell command to be executed on motion detection (no additional quoting)
+motion_command=/bin/bash -ic "/usr/bin/omxplayer --amp -30000 /home/pi/0000248-2.mp3"
