--- a/etc/rpi-security.service
+++ b/etc/rpi-security.service
@@ -8,11 +8,13 @@ StandardOutput=syslog
 StandardError=syslog
 TimeoutStartSec=15
 EnvironmentFile=/etc/rpi-security-environment
-ExecStartPre=/sbin/iw dev ${RPI_SEC_WLAN_ITFC} interface add ${RPI_SEC_MON} type monitor
-ExecStartPre=/sbin/ip link set ${RPI_SEC_MON} up
-ExecStart=/usr/local/bin/rpi-security.py
+#ExecStartPre=/sbin/iw dev ${RPI_SEC_WLAN_ITFC} interface add ${RPI_SEC_MON} type monitor
+#ExecStartPre=/sbin/ip link set ${RPI_SEC_MON} up
+ExecStart=/home/pi/repos/rpi-security/bin/rpi-security.py
 ExecStop=/usr/bin/pkill rpi-security.py
-ExecStopPost=/sbin/iw dev ${RPI_SEC_MON} del
+#ExecStopPost=/sbin/iw dev ${RPI_SEC_MON} del
+Restart=on-failure
+RestartSec=10s
 
 [Install]
 WantedBy=multi-user.target
