--- a/etc/rpi-security.conf
+++ b/etc/rpi-security.conf
@@ -51,4 +51,8 @@ motion_size=640x480
 motion_detection_threshold=1000
 
 # Shell command to be executed on motion detection (no additional quoting)
-motion_command=/bin/bash -ic "/usr/bin/omxplayer --amp -30000 /home/pi/0000248-2.mp3"
+motion_command=/usr/bin/omxplayer --amp -30000 /home/pi/0000248-2.mp3
+
+# For off net usage, we ignore network type errors
+ignore_telegram_errors=True
+ignore_monitoring_errors=True
