Can disable network activity via config

--- a/etc/rpi-security.conf
+++ b/etc/rpi-security.conf
@@ -56,3 +56,5 @@ motion_command=/usr/bin/omxplayer --amp -30000 /home/pi/0000248-2.mp3
 # For off net usage, we ignore network type errors
 ignore_telegram_errors=True
 ignore_monitoring_errors=True
+disable_telegram=False
+disable_monitoring=False
